chore: add copywrite headers

--- a/documentation/app/components/in-page-nav/index.hbs
+++ b/documentation/app/components/in-page-nav/index.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <aside class="docs-InPageNav">
   <h4 class="docs-InPageNav-label">On this page</h4>
   <nav>
