--- a/documentation/app/components/in-page-nav/link.hbs
+++ b/documentation/app/components/in-page-nav/link.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <li class="doc-InPageNav-label--depth-{{@depth}}">
   <a href={{@section}}>{{yield}}</a>
 </li>
