feat: make the in-page-nav stick

--- a/documentation/app/styles/components/in-page-nav.scss
+++ b/documentation/app/styles/components/in-page-nav.scss
@@ -5,6 +5,9 @@
 .docs-InPageNav {
   display: none;
   width: 240px;
+  align-self: start;
+  position: sticky;
+  top: 3rem;
 
   .docs-InPageNav-label {
     margin-bottom: 1.09rem;
