--- a/documentation/app/templates/components/list-item.hbs
+++ b/documentation/app/templates/components/list-item.hbs
@@ -20,209 +20,235 @@
 <Hds::Tabs as |T|>
   <T.Tab>Guidelines</T.Tab>
   <T.Tab>Code</T.Tab>
-
   <T.Panel>
-    <h2>Usage</h2>
-    <h3>When to use</h3>
-    <ul>
-      <li>A list item should be used to contain any information or data that may
-        not be suitable for a standard table. A list can handle displaying more
-        dynamic content since it is never paired with a list header to determine
-        the content within (like a table).</li>
-    </ul>
-    <h3>When not to use</h3>
-    <ul>
-      <li>
-        When your content within is more than 3 lines tall, consider a card
-        instead.
-      </li>
-      <li>
-        If the content you wish to display is consistent for every instance,
-        consider using an HDS table instead.
-      </li>
-      <li>
-        If you are displaying data that requires no action, consider an HDS
-        table instead.
-      </li>
-    </ul>
+    <div class="docs-Page">
+      <div class="docs-Page-content">
+        <h2 id="usage">Usage</h2>
+        <h3 id="when-to-use">When to use</h3>
+        <ul>
+          <li>A list item should be used to contain any information or data that
+            may not be suitable for a standard table. A list can handle
+            displaying more dynamic content since it is never paired with a list
+            header to determine the content within (like a table).</li>
+        </ul>
+        <h3 id="when-not-to-use">When not to use</h3>
+        <ul>
+          <li>
+            When your content within is more than 3 lines tall, consider a card
+            instead.
+          </li>
+          <li>
+            If the content you wish to display is consistent for every instance,
+            consider using an HDS table instead.
+          </li>
+          <li>
+            If you are displaying data that requires no action, consider an HDS
+            table instead.
+          </li>
+        </ul>
 
-    <h2>Interactivity & Actions</h2>
-    <h3>Interactive List Item</h3>
-    <p>The entirety of List Item can be actionable (ie. it can be hovered,
-      clicked, and focused), this is the most common behavior. Ensure the list
-      item “state” =“default” in order to have interactivity within prototypes
-      and code.</p>
+        <h2 id="interactivity-and-actions">Interactivity & Actions</h2>
+        <h3 id="interactive-list-item">Interactive List Item</h3>
+        <p>The entirety of List Item can be actionable (ie. it can be hovered,
+          clicked, and focused), this is the most common behavior. Ensure the
+          list item “state” =“default” in order to have interactivity within
+          prototypes and code.</p>
 
-    <h3>Static List Item</h3>
-    <p>
-      You can use the list item “state” = “static” to make a list item
-      non-interactive (this will apply the “base” elevation / drop-shadow). The
-      list item may have interactive elements within them, but are not
-      themselves actionable or interactive.
-    </p>
+        <h3 id="static-list-item">Static List Item</h3>
+        <p>
+          You can use the list item “state” = “static” to make a list item
+          non-interactive (this will apply the “base” elevation / drop-shadow).
+          The list item may have interactive elements within them, but are not
+          themselves actionable or interactive.
+        </p>
+      </div>
+
+      <InPageNav as |I|>
+        <I.Link @section="#usage" @depth={{1}}>Usage</I.Link>
+        <I.Link @section="#when-to-use" @depth={{2}}>When to use</I.Link>
+        <I.Link @section="#when-not-to-use" @depth={{2}}>When not to use</I.Link>
+        <I.Link @section="#interactivity-and-actions" @depth={{1}}>Interactivity
+          & Actions</I.Link>
+        <I.Link @section="#interactive-list-item" @depth={{2}}>Interactive list
+          item</I.Link>
+        <I.Link @section="#static-list-item" @depth={{2}}>Static list item</I.Link>
+      </InPageNav>
+    </div>
   </T.Panel>
   <T.Panel>
-    <h2>How to use this component</h2>
-    <p>
-      The most basic invocation requires the
-      <CodeInline @code="type" />
-      argument to be passed, along with the
-      <CodeInline @code="title" />
-      and/or
-      <CodeInline @code="description" />
-      content. By default, a neutral
-      <CodeInline @code="alert" />
-      is generated.
-    </p>
+    <div class="docs-Page">
+      <div class="docs-Page-content">
+        <h2 id="how-to-use">How to use this component</h2>
+        <p>
+          The most basic invocation requires the
+          <CodeInline @code="type" />
+          argument to be passed, along with the
+          <CodeInline @code="title" />
+          and/or
+          <CodeInline @code="description" />
+          content. By default, a neutral
+          <CodeInline @code="alert" />
+          is generated.
+        </p>
 
-    <PreviewBlock as |P|>
-      <P.Preview>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-      </P.Preview>
-      <P.Code
-        @code={{{"
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-        "}}}
-        @language="handlebars"
-      />
-    </PreviewBlock>
-
-    <h3>Type</h3>
-    <p>A different type of alert can be invoked using the
-      <CodeInline @code="type" />
-      argument</p>
-
-    <PreviewBlock as |P|>
-      <P.Preview>
-        <Hds::Alert @type="page" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-      </P.Preview>
-      <P.Code
-        @code={{{"
-          <Hds::Alert @type='page' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-        "}}}
-        @language="handlebars"
-      />
-    </PreviewBlock>
-
-    <PreviewBlock as |P|>
-      <P.Preview>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-        <Hds::Alert @type="inline" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-      </P.Preview>
-      <P.Code
-        @code={{{"
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Example of a very long description to show that it scrolls both ways and all is good in the world.</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-          <Hds::Alert @type='inline' as |A|>
-            <A.Title>Title here</A.Title>
-            <A.Description>Description here</A.Description>
-          </Hds::Alert>
-        "}}}
-        @language="handlebars"
-      />
-    </PreviewBlock>
-
-    <PreviewBlock as |P|>
-      <P.Preview>
-        <Hds::Alert @type="compact" as |A|>
-          <A.Title>Title here</A.Title>
-          <A.Description>Description here</A.Description>
-        </Hds::Alert>
-      </P.Preview>
-
-      <P.Code
-        @code={{{"
-            <Hds::Alert @type='compact' as |A|>
+        <PreviewBlock as |P|>
+          <P.Preview>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+          </P.Preview>
+          <P.Code
+            @code={{{"
+            <Hds::Alert @type='inline' as |A|>
               <A.Title>Title here</A.Title>
               <A.Description>Description here</A.Description>
             </Hds::Alert>
           "}}}
-        @language="handlebars"
-      />
-    </PreviewBlock>
+            @language="handlebars"
+          />
+        </PreviewBlock>
+
+        <h3 id="type">Type</h3>
+        <p>A different type of alert can be invoked using the
+          <CodeInline @code="type" />
+          argument</p>
+
+        <PreviewBlock as |P|>
+          <P.Preview>
+            <Hds::Alert @type="page" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+          </P.Preview>
+          <P.Code
+            @code={{{"
+            <Hds::Alert @type='page' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+          "}}}
+            @language="handlebars"
+          />
+        </PreviewBlock>
+
+        <PreviewBlock as |P|>
+          <P.Preview>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type="inline" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+          </P.Preview>
+          <P.Code
+            @code={{{"
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Example of a very long description to show that it scrolls both ways and all is good in the world.</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+            <Hds::Alert @type='inline' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+          "}}}
+            @language="handlebars"
+          />
+        </PreviewBlock>
+
+        <PreviewBlock as |P|>
+          <P.Preview>
+            <Hds::Alert @type="compact" as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+          </P.Preview>
+
+          <P.Code
+            @code={{{"
+              <Hds::Alert @type='compact' as |A|>
+                <A.Title>Title here</A.Title>
+                <A.Description>Description here</A.Description>
+              </Hds::Alert>
+            "}}}
+            @language="handlebars"
+          />
+        </PreviewBlock>
+        <h2 id="example-section">Example Section</h2>
+        <p>This section is below the fold so I can demo the link to hash working
+          properly</p>
+      </div>
+      <InPageNav as |I|>
+        <I.Link @section="#how-to-use" @depth={{1}}>How to usue this component</I.Link>
+        <I.Link @section="#type" @depth={{2}}>type</I.Link>
+        <I.Link @section="#example-section" @depth={{1}}>Example section</I.Link>
+      </InPageNav>
+    </div>
   </T.Panel>
 </Hds::Tabs>
