--- a/documentation/app/styles/app.scss
+++ b/documentation/app/styles/app.scss
@@ -42,6 +42,7 @@ h1 {
 }
 
 h2 {
+  margin-top: 4rem;
   font-size: var(--token-typography-display-400-font-size);
   line-height: var(--token-typography-display-400-line-height);
   font-weight: var(--token-typography-font-weight-bold);
@@ -112,6 +113,10 @@ pre {
     .content,
     .hds-tabs__panel {
       margin-top: 2rem;
+
+      h2:first-of-type {
+        margin-top: 0;
+      }
     }
   }
 
@@ -149,6 +154,18 @@ pre {
     .docs-Page-content {
       max-width: 800px;
       flex-grow: 1;
+
+      img {
+        max-width: 100%;
+      }
+
+      .flex-images {
+        display: flex;
+        align-items: start;
+        justify-content: stretch;
+        flex-wrap: wrap;
+        gap: 1rem;
+      }
     }
   }
 }
