feat: Update list-item header links

--- a/documentation/app/templates/components/list-item.hbs
+++ b/documentation/app/templates/components/list-item.hbs
@@ -4,8 +4,8 @@
 
 <PageHeader
   @title="List Item"
-  @figma="https://www.google.ca"
-  @github="https://github.com"
+  @figma="https://www.figma.com/file/SenC8kTQNUJKCvOvcL8WPu/Consul-Component-Library?type=design&node-id=2-4&t=S9Jf7rEKjWwv3e9d-0"
+  @github="https://github.com/hashicorp/consul-ui-toolkit/tree/main/toolkit/src/components/cut/list-item"
   @status="development"
 >
   A list item is used to list information that is often interactive and when
