--- a/documentation/app/styles/app.scss
+++ b/documentation/app/styles/app.scss
@@ -7,6 +7,7 @@
 @import "./components/page-header";
 @import "./components/preview-block.scss";
 @import "./components/in-page-nav.scss";
+@import "./pages/list-item";
 
 *,
 *::before,
@@ -168,9 +169,4 @@ pre {
       }
     }
   }
-}
-
-.list-item-elevation {
-  width: 184px;
-  height: 80px;
 }
